--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,104 +1,101 @@
-name: CI
-
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - "master"
-    paths:
-      - "app/**"
-      - ".github/workflows/**"
-  pull_request:
-    branches:
-      - "master"
-    paths:
-      - "app/**"
-      - ".github/workflows/**"
-
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: gradle/wrapper-validation-action@v1
+    - continue-on-error: true
+      name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        distribution: temurin
+        java-version: '17'
+    - continue-on-error: true
+      name: Cache Gradle packages
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties')
+          }}
+        path: '~/.gradle/caches
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+          ~/.gradle/wrapper
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+          '
+        restore-keys: '${{ runner.os }}-gradle-
 
-      - name: Build APK
-        run: ./gradlew assembleDebug lintDebug --stacktrace
+          '
+    - continue-on-error: true
+      name: Build APK
+      run: ./gradlew assembleDebug lintDebug --stacktrace
+    - continue-on-error: true
+      name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: app
+        path: app/build/outputs/apk/debug/*.apk
+    - continue-on-error: true
+      name: Cleanup Gradle Cache
+      run: 'rm -f ~/.gradle/caches/modules-2/modules-2.lock
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v2
-        with:
-          name: app
-          path: app/build/outputs/apk/debug/*.apk
+        rm -f ~/.gradle/caches/modules-2/gc.properties
 
-      - name: Cleanup Gradle Cache
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+        '
   test:
-    runs-on: macos-latest
+    runs-on: self-hosted
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+    - continue-on-error: true
+      name: checkout
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        distribution: temurin
+        java-version: '17'
+    - continue-on-error: true
+      id: avd-cache
+      name: AVD cache
+      uses: actions/cache@v3
+      with:
+        key: avd-30
+        path: '~/.android/avd/*
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+          ~/.android/adb*
 
-      - name: AVD cache
-        uses: actions/cache@v3
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-30
-
-      - name: create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          target: aosp_atd
-          api-level: 30
-          arch: x86
-          channel: canary
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          script: echo "Generated AVD snapshot for caching."
-
-      - name: run tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          target: aosp_atd
-          api-level: 30
-          arch: x86
-          channel: canary
-          script: ./gradlew connectedCheck
-
-      - name: Upload test report
-        uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: test-report
-          path: app/build/reports/androidTests/connected/**
+          '
+    - continue-on-error: true
+      if: steps.avd-cache.outputs.cache-hit != 'true'
+      name: create AVD and generate snapshot for caching
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 30
+        arch: x86
+        channel: canary
+        disable-animations: false
+        emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim
+          -camera-back none
+        force-avd-creation: false
+        script: echo "Generated AVD snapshot for caching."
+        target: aosp_atd
+    - continue-on-error: true
+      name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 30
+        arch: x86
+        channel: canary
+        script: ./gradlew connectedCheck
+        target: aosp_atd
+    - continue-on-error: true
+      if: failure()
+      name: Upload test report
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-report
+        path: app/build/reports/androidTests/connected/**
+name: CI
+on:
+  repository_dispatch:
+    types: trigger-ga___ci.yml
